--- a/.env.example
+++ b/.env.example
@@ -1,23 +1,11 @@
 # Environment Variables Configuration
-# Copy this to .env and fill in with your values
+# Minimal setup - Copy this to .env
 
 # Database
 DATABASE_URL=sqlite:///taxi_system.db
-# For production, use: DATABASE_URL=postgresql://user:password@localhost/taxi_db
 
-# Telegram Bot
-TELEGRAM_BOT_TOKEN=YOUR_BOT_TOKEN_HERE
-TELEGRAM_ADMIN_CHAT_ID=YOUR_CHAT_ID_HERE
-
-# Flask Configuration
-SECRET_KEY=your-development-secret-key-change-in-production
-JWT_SECRET=your-jwt-secret-key-change-in-production
-DEBUG=True
-PORT=5000
-
-# URLs
-WEB_APP_URL=http://localhost:5000
-TELEGRAM_WEBHOOK_URL=http://localhost:5000/webhook/telegram
+# Security
+SECRET_KEY=your-secret-key-2025
 
 # Optional Settings
 ORDER_TIMEOUT_MINUTES=30
