Add Telegram bot token and web app URL to Config

--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,12 @@ DATABASE_URL=sqlite:///taxi_system.db
 # Security
 SECRET_KEY=your-secret-key-2025
 
+# Telegram Bot
+TELEGRAM_BOT_TOKEN=YOUR_BOT_TOKEN_HERE
+
+# Web App
+WEB_APP_URL=http://localhost:5000
+
 # Optional Settings
 ORDER_TIMEOUT_MINUTES=30
 AUTO_ASSIGN_RADIUS_KM=5
